--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,47 +1,60 @@
-/* #canvas1 {
-    border: 5px solid black;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 600px;
-    height: 600px;
-}
-
-#canvas2 {
-    border: 5px solid black;
-    position: absolute;
-    top: 150%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 600px;
-    height: 600px;
-}
-*/
-
-#canvas1 {
+#canvas {
     display: block;
-    border: 5px solid black;
     margin: 0 auto;
     width: 600px;
     height: 600px;
 }
 
-#canvas2 {
-    display: block;
-    border: 5px solid black;
-    margin: 20px auto;
-    width: 600px;
-    height: 600px;
+.select-animation label, select {
+    font-size: 24px;
 }
 
 label {
     display: block;
     text-align: center;
+    margin: 10px 0 0 0;
 }
 
 select {
     display: block;
-    margin: 10px auto;
+    margin: 10px auto 0;
     padding: 5px;
 }
+
+@media only screen and (max-width: 1280px) {
+    #canvas {
+        width: 500px;
+        height: 500px;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    #canvas {
+        width: 450px;
+        height: 450px;
+    }
+    .select-animation label, select {
+        font-size: 24px;
+    }
+}
+
+@media only screen and (max-width: 740px) {
+    #canvas {
+        width: 400px;
+        height: 400px;
+    }
+    .select-animation label, select {
+        font-size: 18px;
+    }
+}
+
+@media only screen and (max-width: 440px) {
+    #canvas {
+        width: 350px;
+        height: 350px;
+    }
+    .select-animation label, select {
+        font-size: 16px;
+    }
+}
+
